--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,229 @@
-.App {
+﻿h1 {
+  margin: 0px;
+  padding: 0px;
+  font-size: 70px;
+  letter-spacing: -.055em; }
+
+h2 {
+  margin: 0px;
+  padding: 5px; }
+
+p {
+  margin: 0px;
+  padding: 0px; }
+
+a {
+  text-decoration: none; }
+
+input {
+  margin: 2px;
+  border-radius: 3px;
+  border: 1px solid black;
+  padding: 3px; }
+
+.shadow, .addNew, .readItem {
+  box-shadow: 5px 3px #16aba6; }
+
+.appContainer {
+  font-family: helvetica; }
+
+.appLogo {
+  float: left;
+  padding-right: 40px; }
+
+.toolbar {
+  background-color: #ffffff;
+  padding-bottom: 20px;
+  border-bottom: 2px solid #bac4d6; }
+
+.addNew {
+  padding: 15px;
+  display: inline-block;
+  background-color: #f7e58b; }
+  .addNew p {
+    line-height: 1; }
+
+.logoLarge, h1 {
+  font-weight: 600;
+  color: #e9eef7;
+  text-shadow: 0.03em 0.04em #138f8b; }
+
+.logoSmall, h2 {
+  font-weight: 600;
+  color: #138f8b;
+  text-shadow: 0.06em 0.08em #c3cfe3;
+  font-size: 24px; }
+
+.message {
+  padding: 10px;
+  font-size: 16px;
+  line-height: 1.5em; }
+
+.readListContainer {
+  margin: 10px 0 0 0; }
+
+.readList {
+  padding: 10px 0;
+  float: left;
+  width: 50%;
+  min-width: 325px; }
+
+.filterGroup {
+  display: inline-block;
+  margin-top: 2px; }
+
+.filterGroup:not(:last-child) {
+  border-right: 1px solid #bac4d6; }
+
+/* Styles for individual "Reads" */
+.readItem {
+  padding: 10px 10px 0 10px;
+  max-width: 90%;
+  margin: auto;
+  transition-duration: 0.4s; }
+
+.readItem:not(:last-child) {
+  margin-bottom: 6px; }
+
+.readName {
+  color: black;
+  font-size: 16px; }
+
+.readInfo:hover .readName {
+  text-decoration: underline; }
+
+.activeReadList .readItem {
+  background-color: #cbc9ff; }
+
+.activeReadList .readItem:hover {
+  background-color: #bdbaff; }
+
+.activeReadList .readInfo {
+  border-bottom: 2px solid #cbc9ff; }
+
+.completedReadList .readItem {
+  background-color: #d8d8e8; }
+
+.completedReadList .readItem:hover {
+  background-color: #c5c5e6; }
+
+.completedReadList .readInfo {
+  border-bottom: 2px solid #d8d8e8; }
+
+.readFlair {
+  display: inline-block; }
+
+.readFlair .favorite {
+  color: #d99400; }
+
+.readFlair .favorite:hover {
+  color: #dbae4d; }
+
+.readFlair .important {
+  color: #e63c5e; }
+
+.readFlair .important:hover {
+  color: #e87289; }
+
+.readFlair i:hover {
+  cursor: pointer; }
+
+.timeStamp {
+  padding: 5px 0;
+  color: #5b5b69;
+  font-size: .8em; }
+
+/* End styles for individual "Reads" */
+/* Button styles */
+.buttonShadow, .appButton, .readButton, .filterButton:hover, .activeFilterButton:hover, .tooltipContainer .tooltip {
+  box-shadow: 2px 2px #16aba6; }
+
+.roundButton, .appButton, .readButton, .filterButton, .activeFilterButton {
+  border-radius: 3px;
+  cursor: pointer;
+  border: none;
+  padding: 3px 5px;
   text-align: center;
-}
+  display: inline-block;
+  margin: 2px; }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.appButton, .readButton {
+  background-color: #ffffff;
+  transition-duration: 0.4s; }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.appButton:hover, .readButton:hover {
+  background-color: #000000;
+  color: #ffffff; }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+.appButton:active, .readButton:active {
+  box-shadow: 2px 1px #16aba6;
+  transform: translateY(1px); }
 
-.App-link {
-  color: #61dafb;
-}
+.filterButton {
+  background-color: inherit;
+  text-decoration: underline;
+  transition-duration: 0.4s; }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.filterButton:hover {
+  background-color: #000000;
+  color: #ffffff; }
+
+.activeFilterButton {
+  background-color: #000000;
+  color: #ffffff;
+  text-decoration: underline;
+  transition-duration: 0.4s; }
+
+.activeFilterButton:hover {
+  background-color: #e9eef7;
+  color: #000000; }
+
+.filterButton:active {
+  box-shadow: 2px 1px #16aba6;
+  transform: translateY(1px); }
+
+.readButton {
+  float: right; }
+
+.flairButton {
+  display: inline-block;
+  padding-right: 4px; }
+
+.buttonIcon {
+  font-size: 14px;
+  margin: 0 1px;
+  display: inline-flex;
+  vertical-align: text-bottom; }
+
+/* End Button styles*/
+/* Tooltip styles */
+.tooltipContainer {
+  position: relative;
+  display: inline-block; }
+
+.tooltipContainer .tooltip {
+  visibility: hidden;
+  background-color: black;
+  color: #ffffff;
+  text-align: center;
+  font-size: 12px;
+  padding: 3px 5px;
+  border-radius: 3px;
+  position: absolute;
+  z-index: 1;
+  left: 105%; }
+
+.tooltipContainer:hover .tooltip {
+  visibility: visible; }
+
+.tooltipContainer .tooltip::after {
+  content: " ";
+  position: absolute;
+  top: 50%;
+  right: 100%;
+  margin-top: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent black transparent transparent; }
+
+/* End Tooltip styles */
