improve visual spacing of toolbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -55,7 +55,7 @@ input {
 
 .toolbar {
     background-color: #ffffff;
-    padding-bottom: 20px;
+    padding: 15px 0;
     border-bottom: 2px solid $border;
 }
 
