--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ input {
 
 .toolbar {
   background-color: #ffffff;
-  padding-bottom: 20px;
+  padding: 15px 0;
   border-bottom: 2px solid #bac4d6; }
 
 .addNew {
