--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,15 @@ input {
 .shadow, .addNew, .readItem {
   box-shadow: 5px 3px #16aba6; }
 
+@keyframes shake {
+  25% {
+    transform: translate(0px, 2px); }
+  75% {
+    transform: translate(0px, -2px); } }
+
+.shake {
+  animation: shake .2s 4; }
+
 .appContainer {
   font-family: helvetica; }
 
