--- a/src/App.scss
+++ b/src/App.scss
@@ -44,6 +44,16 @@ input {
     box-shadow: 5px 3px $shadow-main;
 }
 
+@keyframes shake {
+    25% { transform: translate(0px, 2px)}
+
+    75% { transform: translate(0px, -2px)}
+}
+
+.shake {
+    animation: shake .2s 4;
+}
+
 .appContainer {
     font-family: helvetica;
 }
