--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,8 @@
-﻿$shadow-main: #16aba6;
+﻿/* App colors */
+$shadow-main: #16aba6;
 $shadow-text: #138f8b;
 $action-main: #f7e58b;
+$action-edit: #b2d4ca;
 $logo-main: #e9eef7;
 $logo-invert: #138f8b;
 $shadow-invert: #c3cfe3;
@@ -69,17 +71,49 @@ input {
     border-bottom: 2px solid $border;
 }
 
-.addNew {
-    @extend .shadow;
-    padding: 15px;
-    display: inline-block;
-    background-color: $action-main;
-
-    p {
-        line-height: 1;
-    }
+.hidden {
+    visibility:hidden;
 }
 
+/*Styles for action elements*/
+.popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.readInput {
+    @extend .shadow;
+    padding: 15px 15px 5px 15px;
+}
+
+.newRead {
+    @extend .readInput;
+    display: inline-block;
+    background-color: $action-main;
+}
+
+.editRead {
+    @extend .readInput;
+    @extend .popup;
+    background-color: $action-edit;
+    z-index:2;
+}
+
+.lock {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(90, 90, 90, 0.4);
+    z-index: 2;
+}
+/*End styles for action elements*/
+
+/* Styles for text*/
 .logoLarge {
     font-weight: 600;
     color: $logo-main;
@@ -99,6 +133,13 @@ input {
     line-height: 1.5em;
 }
 
+.errorMessage {
+    padding: 1px 0 0 2px;
+    font-size: 11px;
+    color: #b00000;
+}
+/* End text styles */
+
 .readListContainer {
     margin: 10px 0 0 0;
 }
@@ -110,15 +151,6 @@ input {
     min-width: 325px;
 }
 
-.filterGroup {
-    display: inline-block;
-    margin-top: 2px;
-}
-
-.filterGroup:not(:last-child) {
-    border-right: 1px solid $border;
-}
-
 /* Styles for individual "Reads" */
 .readItem {
     @extend .shadow;
@@ -128,7 +160,7 @@ input {
     transition-duration: 0.4s;
 }
 
-.readItem:not(:last-child) {
+.readItemContainer:not(:last-child) {
     margin-bottom: 6px;
 }
 
@@ -155,6 +187,10 @@ input {
     .readInfo {
         border-bottom: 2px solid $active;
     }
+
+    .editMode {
+        background-color: $action-edit;
+    }
 }
 
 .completedReadList {
@@ -169,13 +205,19 @@ input {
     .readInfo {
         border-bottom: 2px solid $completed;
     }
+
+    .editMode {
+        background-color: $action-edit;
+    }
+}
+
+.readAction {
+    padding-bottom: 2px;
 }
 
 .readFlair {
     display: inline-block;
-}
 
-.readFlair {
     .favorite {
         color: #d99400;
     }
@@ -275,14 +317,25 @@ input {
 
 .flairButton {
     display: inline-block;
-    padding-right: 4px;
+    background-color: inherit;
+    border: none;
+    padding: 0 3px 0 0;
+    margin: 0;
 }
 
 .buttonIcon {
     font-size: 14px;
-    margin: 0 1px;
     display: inline-flex;
-    vertical-align: text-bottom;
+    vertical-align: middle;
+}
+
+.filterGroup {
+    display: inline-block;
+    margin-top: 2px;
+}
+
+.filterGroup:not(:last-child) {
+    border-right: 1px solid $border;
 }
 /* End Button styles*/
 
@@ -301,9 +354,12 @@ input {
     font-size: 12px;
     padding: 3px 5px;
     border-radius: 3px;
+
     position: absolute;
-    z-index: 1;
-    left: 105%;
+    width: 50px;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -30px;
 }
 
 .tooltipContainer:hover .tooltip {
@@ -313,11 +369,11 @@ input {
 .tooltipContainer .tooltip::after {
     content: " ";
     position: absolute;
-    top: 50%;
-    right: 100%;
-    margin-top: -5px;
+    top: 100%; /* At the bottom of the tooltip */
+    left: 50%;
+    margin-left: -5px;
     border-width: 5px;
     border-style: solid;
-    border-color: transparent black transparent transparent;
+    border-color: black transparent transparent transparent;
 }
 /* End Tooltip styles */
